  0 = disable, 1 = auto-cancel. 2 = auto-accept
- "drop" and "storage get" can now drop/get more than 1 item. Example:
  storage get 4,7   (gets storage item 4 and 7)
  drop 3,5          (drops inventory item 3 and 5)
- New command: cart desc
- Log files (item log, chat log, walk.dat) are now stored in the logs folder.
- Color support. Colors are defined in control/consolecolors.txt


==================
### OpenKore 1.0.3
==================

- *Really* fix vending this time.
- Fix storage listing.
- Fix avoid_ignore.


==================
### OpenKore 1.0.2
==================

- Fix vending.


==================
### OpenKore 1.0.1
==================

Bugfix release (iRO server changes on March 10 2004)
- Inventory listing fixed.
- Cart listing fixed.
- Linux version now uses XS instead of C::DynaLib.


==================
### OpenKore 1.0.0
==================

NOTE: a lot of new config options has been added. It's highly recommended
take the default configuration files and modify them, so that you won't
miss any of the new config options.

- Forgot to mention in the last News.txt:
  followEmotion requires another config option: followEmotion_distance
  The master must be within this distance to imitate his emoticons.
- Better way to autodetect platform (using $^O).
- Fixed teleportAuto_search.
- Added comments to some pieces of code.
- Fixed a typo in the clientSuspend AI sequence.
- Improved anti-looting.
- Don't get disconnected when AI's turned off in non-XKore mode.
- Changed avoidGM and avoid player code to an AI sequence.
  New entry for timeouts.txt:
	ai_avoidcheck 0.5
  New config options:
	avoidList	(set to 1 to turn on the avoid list)
	avoidList_reconnect
- Removed the need for the local_port config option.
  You can remove this option now!
- Input client child process will now exit correctly if parent process
  exits abnormally.
- Implemented a simple form of dynamic code reloading. All functions
  are now in functions.pl.